# tap-oenb-meldefonds

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tap_oenb_meldefonds/: main.py
tests/: check_tap.sh  sample_meldefonds.csv  test_main.py
